# AlphaZero

./: .gitignore  .gitmodules  README.md  evaluator.cpp  evaluator.hpp  module.cpp  node.cpp
src/: CMakeLists.txt  evaluator.hpp  generate.cpp  gpu2cpu.cpp  main.cpp  mcts.cpp  mcts.hpp  netcompare.cpp  netconfig.hpp  network.hpp  node.hpp  replay.hpp  train.cpp  util.h
